--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
-<meta charset="UTF-8">
+<html lang="en-us">
+    <head>
+        <meta charset="UTF-8">
+        <title>The Diversity of Art</title>
+        <!-- Box model CSS -->
+        <!-- <link href="css/box-model.css" type="text/css" rel="stylesheet" /> -->
+        <!-- Colors and styles CSS -->
+        <link href="css/styles.css" type="text/css" rel="stylesheet" />
+        <!-- Layout and structure CSS -->
+        <link href="css/layout.css" type="text/css" rel="stylesheet" />
+    </head>
 
-<title></title>
+    <body>
 
-<body>
-<h1>Group 5 Webpage</h1>
+        <header>
+            <!-- TOP SITE BANNER -->
 
-</body>
+            <!-- BANNER LOGO -->
+            <div id="top-banner-contents" class="row">
+                <a href=""><img id="top-banner-logo" src="images/smiley-logo.png" atl="Site logo" title="Site logo" width="100" height="100"/></a>
+
+                <!-- SITE TITLES -->
+                <div id="website-titles">
+                    <!-- SITE TITLE & SUBTITLE -->
+                    <h1>The Diversity of Art</h1> 
+                    <h3 id="subtitle">A GitHub Project</h3>
+                </div>
+            </div>
+        </header>
+
+        <section id="page-content-wrapper">
+                <!-- PAGE MAIN CONTENT -->
+
+                <!-- PAGE HEADER IMAGE -->
+                <img id="page-main-image" class="centered-image" src="images/test-header-image.jpg" atl="Header image" title="Header image" />
+
+            <h1 id="page-content-title">Home Page Title</h1>
+
+            <div id="home-main-content">
+                <main>
+                    <!-- MAIN TEXT BODY -->
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dui mauris, mollis eu tristique eu, pulvinar aliquet velit. Etiam eu quam eros. Proin dapibus nec odio quis sagittis. Vestibulum ut ultrices est, non condimentum risus. Pellentesque et eleifend felis. Nullam mauris tellus, molestie commodo gravida eu, fermentum eu erat. Cras nec ante ac dui fermentum venenatis. Donec egestas id sem tempor accumsan. Praesent tincidunt condimentum elit, id condimentum nulla sodales faucibus. Donec eu lectus rhoncus, accumsan velit eu, lobortis enim.</p>
+                </main>
+            </div>
+            
+        </section>
+
+        <footer>
+            <!--    PAGE NAVIGATION
+                    ADD LINKS -FOR- EACH PAGE -TO- EACH PAGE -->
+
+            <nav id="navigation" class="row">
+                <ul>
+                    <li>
+                        <a href="handcrafts.html">Handcrafts</a>
+                    </li>
+                    <li>
+                        <a href="digital-art.html">Digital Art</a>
+                    </li>
+                    <li>
+                        <a href="inking.html">Inking</a>
+                    </li>
+                    <li>
+                        <a href="cocoa-painting.html">Cocoa Painting</a>
+                    </li>
+                    <li>
+                        <a href="glassblowing.html">Glassblowing</a>
+                    </li>
+                </ul>
+            </nav>
+            <!--    HOME & CREDITS NAVIGATION 
+                    REPLACE WITH GITHUB LINKS -->
+
+            <div id="site-info" class="row">
+                <p><a href="index.html">Home</a> | <a href="credits.html">Credits</a> | <a href="https://github.com/StephenGrose/IT115-F203186-A4-Group5">By Group 5</a></p>
+            </div>
+
+        </footer>
+
+    </body>
 
 </html>
