--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <!-- BANNER LOGO -->
             <div id="top-banner-contents" class="row">
-                <a href=""><img id="top-banner-logo" src="images/smiley-logo.png" atl="Site logo" title="Site logo" width="100" height="100"/></a>
+                <a href=""><img id="top-banner-logo" src="images/group5_logo_white.png" atl="Site logo" title="Site logo" width="100" height="100"/></a>
 
                 <!-- SITE TITLES -->
                 <div id="website-titles">
