Add the paragraph content

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
             <div id="home-main-content">
                 <main>
                     <!-- MAIN TEXT BODY -->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dui mauris, mollis eu tristique eu, pulvinar aliquet velit. Etiam eu quam eros. Proin dapibus nec odio quis sagittis. Vestibulum ut ultrices est, non condimentum risus. Pellentesque et eleifend felis. Nullam mauris tellus, molestie commodo gravida eu, fermentum eu erat. Cras nec ante ac dui fermentum venenatis. Donec egestas id sem tempor accumsan. Praesent tincidunt condimentum elit, id condimentum nulla sodales faucibus. Donec eu lectus rhoncus, accumsan velit eu, lobortis enim.</p>
+                    <p>In the past, creating art was a difficult and expensive process. Often artists were incredibly poor, or beholden to wealthy patrons with little choices of their own. Materials were expensive, and galleries were exclusive. However, in the modern era, two things have changed. One, the definition of art has broadened, leading to many kinds of artists being able to create whatever they like with the tools they have on hand. Two, materials, education, and spaces to display art have become widely available, often for free. Because of this, the culture of art has shifted from exclusivity and strict definitions to freedom, creativity, and diversity.</p>
+                    <p>There are many kinds of art in the world, and it’s becoming easier to learn new techniques and mediums to express your ideas, or just have fun! Art is no longer only for professionals. Art can now be made simply because the artist wants to make it, and often it’s that very freedom that resonates with people. From painting to animation, from crafts to sculpture, from 3D modeling to pixel art, all kinds of art have gained respect and become more accessible than ever.
+</p>
+                    <p>Our team has selected a number of art mediums for you to explore. You don’t need expensive supplies, and you don’t have to build a career out of it. Just relax, and have fun. Try one or many kinds of art, and see what brings you joy or helps you express something important to you. Remember, art is for everyone. It’s not about making something perfect. It’s about expressing a feeling. Every single artist in this world has something unique to express, and there’s space for everyone to create together.
+</p>
                 </main>
             </div>
             
