Update page title

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <!-- PAGE HEADER IMAGE -->
                 <img id="page-main-image" class="centered-image" src="images/header_image.png" atl="Header image" title="Header image" />
 
-            <h1 id="page-content-title">Home Page Title</h1>
+            <h1 id="page-content-title">The Diversity of Art</h1>
 
             <div id="home-main-content">
                 <main>
