--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
             <!-- BANNER LOGO -->
             <div id="top-banner-contents" class="row">
-                <a href=""><img id="top-banner-logo" src="images/group5_logo_white (1).png" atl="Site logo" title="Site logo" /></a>
+                <a href="index.html"><img id="top-banner-logo" src="images/group5_logo_white (1).png" atl="Site logo" title="Site logo" /></a>
 
                 <!-- SITE TITLES -->
                 <div id="website-titles">
                     <!-- SITE TITLE & SUBTITLE -->
-                    <h1>The Diversity of Art</h1> 
-                    <h3 id="subtitle">A GitHub Project</h3>
+                    <h1><a href="index.html">The Diversity of Art</a></h1> 
+                    <h3 id="subtitle"><a href="index.html">A GitHub Project</a></h3>
                 </div>
             </div>
         </header>
