--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <!-- SITE TITLES -->
                 <div id="website-titles">
                     <!-- SITE TITLE & SUBTITLE -->
-                    <h1><a href="index.html">The Diversity of Art</a></h1> 
+                    <h1 id="title"><a href="index.html">The Diversity of Art</a></h1> 
                     <h3 id="subtitle"><a href="index.html">A GitHub Project</a></h3>
                 </div>
             </div>
