--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <a href="inking.html">Inking</a>
                     </li>
                     <li>
-                        <a href="cocoa-painting.html"><img src="images/cocoa_120x110.png" alt="Cocoa Painting Link">Cocoa Painting</a>
+                        <a href="cocoa-painting.html">Cocoa Painting</a>
                     </li>
                     <li>
                         <a href="glassblowing.html">Glassblowing</a>
