--- a/cocoa-painting.html
+++ b/cocoa-painting.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
-        <title>The Diversity of Art</title>
+        <title>The Diversity of Art | Cocoa Painting</title>
         <!-- Box model CSS -->
         <!-- <link href="css/box-model.css" type="text/css" rel="stylesheet" /> -->
         <!-- Colors and styles CSS -->
@@ -18,13 +18,13 @@
 
             <!-- BANNER LOGO -->
             <div id="top-banner-contents" class="row">
-                <a href=""><img id="top-banner-logo" src="images/smiley-logo.png" atl="Site logo" title="Site logo" width="100" height="100"/></a>
+                <a href="index.html"><img id="top-banner-logo" src="images/group5_logo_white (1).png" atl="Site logo" title="Site logo" /></a>
 
                 <!-- SITE TITLES -->
                 <div id="website-titles">
-                    <!-- SITE TITLE & SUBTITLE -->     
-                    <h1>The Diversity of Art</h1> 
-                    <h3 id="subtitle">A GitHub Project</h3>
+                    <!-- SITE TITLE & SUBTITLE -->
+                    <h1 id="title"><a href="index.html">The Diversity of Art</a></h1> 
+                    <h3 id="subtitle"><a href="index.html">A GitHub Project</a></h3>
                 </div>
             </div>
         </header>
@@ -33,7 +33,7 @@
                 <!-- PAGE MAIN CONTENT -->
 
                 <!-- PAGE HEADER IMAGE -->
-                <img id="page-main-image" class="centered-image" src="images/test-header-image.jpg" atl="Main image" title="Main image" />
+                <img id="page-main-image" class="centered-image" src="images/cocoa_image_900x530.png" atl="Header image" title="Header image" />
 
             <h1 id="page-content-title">Cocoa Painting</h1>
 
