--- a/cocoa-painting.html
+++ b/cocoa-painting.html
@@ -70,7 +70,7 @@
                     
                     <!-- AUTHOR TEXT -->
                     <h2>Resources</h3>
-                    <p>Unfortunately there is no decent video tutorial about cocoa powder painting. However, this one coffee painting video for beginners 
+                    <p>Unfortunately there is no decent video tutorial about cocoa powder painting. However, this one coffee <a href="https://www.youtube.com/watch?v=VtC-QmqaApw" target="_blank">painting video</a> for beginners 
                         helps so much as coffee and cocoa powder painting are very similar.  
                         </p>
                 </aside>
