--- a/cocoa-painting.html
+++ b/cocoa-painting.html
@@ -66,7 +66,7 @@
                     <!-- AUTHOR IMAGE & TEXT BODY -->
 
                     <!-- AUTHOR IMAGE -->
-                    <img id="author-image" class="centered-image" src="images/test-profile-pic.jpg" atl="Author image" title="Author image" width="170" height="170" />
+<!--                     <img id="author-image" class="centered-image" src="images/test-profile-pic.jpg" atl="Author image" title="Author image" width="170" height="170" /> -->
                     
                     <!-- AUTHOR TEXT -->
                     <h2>Resources</h3>
