--- a/cocoa-painting.html
+++ b/cocoa-painting.html
@@ -73,6 +73,8 @@
                     <p>Unfortunately there is no decent video tutorial about cocoa powder painting. However, this one coffee <a href="https://www.youtube.com/watch?v=VtC-QmqaApw" target="_blank">painting video</a> for beginners 
                         helps so much as coffee and cocoa powder painting are very similar.  
                         </p>
+                    <p>Read a cool story behind the cover picture <a href="https://seattlecollegian.com/oh-friend-im-here-for-you/" target="_blank">here.</a>  
+                        </p>
                 </aside>
             </div>
             
