--- a/digital-art.html
+++ b/digital-art.html
@@ -50,6 +50,7 @@
 For those who do want their own equipment, drawing tablets can be found cheaply, and powerful drawing software can be found for free.
 </p>
                     <h2>Where to start?</h2>
+                    <div class="list-of-stuff">
                     <h3>Free art software</h3>
                     <ul>
                     <li>Drawing programs: Krita (best for comics and illustration), Gimp (generalist)</li>
@@ -77,6 +78,7 @@ For those who do want their own equipment, drawing tablets can be found cheaply,
                     
                     <h3>Artist communities</h3>
                     <p>Tumblr, Deviantart, Instagram, etc.</p>
+                        </div>
 
                     
                 </main>
