--- a/digital-art.html
+++ b/digital-art.html
@@ -91,9 +91,11 @@ For those who do want their own equipment, drawing tablets can be found cheaply,
                     
                     <!-- AUTHOR TEXT -->
                     <h3>Resources</h3>
-                    <a href="https://www.archisoup.com/studio-tools/best-cheap-drawing-tablets" target='_blank'>Drawing tablet comparison</a>
-                    <a href="https://www.artistsnetwork.com/free-art-instruction/" target='_blank'>Art tutorials</a>
-                    <a href="https://artres.xyz/post/fantastic-free-and-open-source-software-programs/" target='_blank'>List of free programs</a>
+                    <ul>
+                    <li><a href="https://www.archisoup.com/studio-tools/best-cheap-drawing-tablets" target='_blank'>Drawing tablet comparison</a></li>
+                    <li><a href="https://www.artistsnetwork.com/free-art-instruction/" target='_blank'>Art tutorials</a></li>
+                    <li><a href="https://artres.xyz/post/fantastic-free-and-open-source-software-programs/" target='_blank'>List of free programs</a></li>
+                        </ul>
                    
                 </aside>
             </div>
