--- a/digital-art.html
+++ b/digital-art.html
@@ -131,7 +131,7 @@ For those who do want their own equipment, drawing tablets can be found cheaply,
                     REPLACE WITH GITHUB LINKS -->
 
             <div id="site-info" class="row">
-                <p><a href="index.html">Home</a> | <a href="credits.html">Credits</a> | <a href="https://github.com/StephenGrose/IT115-F203186-A4-Group5">By Group 5</a></p>
+                <p><a href="index.html">Home</a> | <a href="credits.html">Members</a> | <a href="https://github.com/StephenGrose/IT115-F203186-A4-Group5" target="_blank">Our GitHub Repo</a></p>
             </div>
 
         </footer>
