--- a/credits.html
+++ b/credits.html
@@ -33,7 +33,7 @@
                 <!-- PAGE MAIN CONTENT -->
 
                 <!-- PAGE HEADER IMAGE -->
-<!--                 <img id="page-main-image" class="centered-image" src="images/test-header-image.jpg" atl="Header image" title="Header image" /> -->
+                <img id="page-main-image" class="centered-image" src="images/team_image.png" atl="Team image" title="Header image" />
 
             <h1 id="page-content-title">The Group 5 Team</h1>
 
