--- a/credits.html
+++ b/credits.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8">
-        <title>The Diversity of Art</title>
+        <title>The Diversity of Art | Members</title>
         <!-- Box model CSS -->
         <!-- <link href="css/box-model.css" type="text/css" rel="stylesheet" /> -->
         <!-- Colors and styles CSS -->
@@ -11,7 +11,7 @@
         <link href="css/layout.css" type="text/css" rel="stylesheet" />
     </head>
 
-    <body>
+    <body id = "members">
 
         <header>
             <!-- TOP SITE BANNER -->
