Enables video links to open in new tabs

--- a/handcrafts.html
+++ b/handcrafts.html
@@ -61,11 +61,11 @@
                     
                     <h3>Tutorials</h3>
                     <ul>
-                    <li>Knitting: <a href="https://crafts.tutsplus.com/series/how-to-knit-step-by-step-tutorials-for-beginners--cms-585" target="_blank">Webpage</a>/<a href="https://www.youtube.com/watch?v=p_R1UDsNOMk">Video</a></li>
-                    <li>Crochet: <a href="https://www.thesprucecrafts.com/crochet-tutorials-979089" target="_blank">Webpage</a>/<a href="https://www.youtube.com/watch?v=aAxGTnVNJiE">Video</a></li>   
-                    <li>Cross-Stitch: <a href="https://studio-koekoek.com/cross-stitch-instructions-tutorial-for-beginners/" target="_blank">Webpage</a>/<a href="https://www.youtube.com/watch?v=8UGaHX9IPcQ">Video</a></li>    
-                    <li>Embroidery: <a href="https://www.instructables.com/Embroidery-101/" target="_blank">Webpage</a>/<a href="https://www.youtube.com/watch?v=4tboUqTV41U">Video</a></li>
-                    <li>Needle Felting: <a href="https://wonderfuldiy.com/needle-felting-tutorials-beginners/" target="_blank">Webpage</a>/<a href="https://www.youtube.com/watch?v=bD0sZhDhDrw">Video</a></li>    
+                    <li>Knitting: <a href="https://crafts.tutsplus.com/series/how-to-knit-step-by-step-tutorials-for-beginners--cms-585" target="_blank">Webpage</a>/<a href="https://www.youtube.com/watch?v=p_R1UDsNOMk" target="_blank">Video</a></li>
+                    <li>Crochet: <a href="https://www.thesprucecrafts.com/crochet-tutorials-979089" target="_blank">Webpage</a>/<a href="https://www.youtube.com/watch?v=aAxGTnVNJiE" target="_blank">Video</a></li>   
+                    <li>Cross-Stitch: <a href="https://studio-koekoek.com/cross-stitch-instructions-tutorial-for-beginners/" target="_blank">Webpage</a>/<a href="https://www.youtube.com/watch?v=8UGaHX9IPcQ" target="_blank">Video</a></li>    
+                    <li>Embroidery: <a href="https://www.instructables.com/Embroidery-101/" target="_blank">Webpage</a>/<a href="https://www.youtube.com/watch?v=4tboUqTV41U" target="_blank">Video</a></li>
+                    <li>Needle Felting: <a href="https://wonderfuldiy.com/needle-felting-tutorials-beginners/" target="_blank">Webpage</a>/<a href="https://www.youtube.com/watch?v=bD0sZhDhDrw" target="_blank">Video</a></li>    
                     </ul>
 
                     
