Fix the 'free programs' broken link

--- a/digital-art.html
+++ b/digital-art.html
@@ -94,7 +94,7 @@ For those who do want their own equipment, drawing tablets can be found cheaply,
                     <ul>
                     <li><a href="https://www.archisoup.com/studio-tools/best-cheap-drawing-tablets" target='_blank'>Drawing tablet comparison</a></li>
                     <li><a href="https://www.artistsnetwork.com/free-art-instruction/" target='_blank'>Art tutorials</a></li>
-                    <li><a href="https://artres.xyz/post/fantastic-free-and-open-source-software-programs/" target='_blank'>List of free programs</a></li>
+                    <li><a href="https://opensource.com/article/16/12/yearbook-top-open-source-creative-tools-2016" target='_blank'>List of free programs</a></li>
                         </ul>
                    
                 </aside>
