--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
                     <h1 id="title"><a href="index.html">The Diversity of Art</a></h1> 
                     <h3 id="subtitle"><a href="index.html">A GitHub Project</a></h3>
                 </div>
+                <!------ NAV  ------>
+                <nav>
+                <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="handcrafts.html">Handcrafts</a></li>
+                <li><a href="digital-art.html">Digital Art</a></li>
+                <li><a href="inking.html">Inking</a></li>
+                <li><a href="cocoa-painting.html">Cocoa Painting</a></li>
+                <li><a href="glassblowing.html">Glassblowing</a></li>
+                <li><a href="credits.html">Members</a></li>
+                
+                </ul>
+        </nav>
             </div>
         </header>
 
