--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h3 id="subtitle"><a href="index.html">A GitHub Project</a></h3>
                 </div>
                 <!------ NAV  ------>
-                <nav>
+                <div class="menu">
                 <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="handcrafts.html">Handcrafts</a></li>
@@ -41,7 +41,7 @@
                 <li><a href="credits.html">Members</a></li>
                 
                 </ul>
-        </nav>
+        </div>
             </div>
         </header>
 
