--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                     <h1 id="title"><a href="index.html">The Diversity of Art</a></h1> 
                     <h3 id="subtitle"><a href="index.html">A GitHub Project</a></h3>
                 </div>
-                <!------ NAV  ------>
+                
+            </div>
+            <!------ Top menu  ------>
                 <div class="menu">
                 <ul>
                 <li><a href="index.html">Home</a></li>
@@ -42,7 +44,6 @@
                 
                 </ul>
         </div>
-            </div>
         </header>
 
         <section id="page-content-wrapper">
