--- a/credits.html
+++ b/credits.html
@@ -27,6 +27,19 @@
                     <h3 id="subtitle"><a href="index.html">A GitHub Project</a></h3>
                 </div>
             </div>
+            <!------ Top menu  ------>
+                <div class="menu">
+                <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="handcrafts.html">Handcrafts</a></li>
+                <li><a href="digital-art.html">Digital Art</a></li>
+                <li><a href="inking.html">Inking</a></li>
+                <li><a href="cocoa-painting.html">Cocoa Painting</a></li>
+                <li><a href="glassblowing.html">Glassblowing</a></li>
+                <li><a href="credits.html">Members</a></li>
+                
+                </ul>
+        </div>
         </header>
 
         <section id="page-content-wrapper">
