--- a/credits.html
+++ b/credits.html
@@ -53,7 +53,7 @@
             <div id="credits-main-content">
                 <main>
                     <!-- MAIN TEXT BODY -->
-                    <p><strong>Stephen Grose</strong> - Team lead | Project and repo management | Writing and research (Handcrafts/Fibercrafts)
+                    <p><strong>Stephen Grose</strong> - Team lead | Project and repo management | Writing and research (Handcrafts/Fibrecrafts)
                         <br>
                         <strong>Rory Hackney</strong> - Writing and research (Home Page, Digital Art, Inking)
                         <br>
