Revert "Adds navigation error fixes, additional styles, and revised markup"
This reverts commit e43cf8612bb01063e509b086fe7dccdca1a6ce7a.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 
-                <a href="index.html"><img id="top-banner-logo" src="images/group5_logo_white.png" alt="Site logo" title="Site logo" /></a>
+                <a href="index.html"><img id="top-banner-logo" src="images/group5_logo_white (1).png" atl="Site logo" title="Site logo" /></a>
 
                 <!-- SITE TITLES -->
                 <div id="website-titles">
@@ -31,11 +31,10 @@
                 </div>
                 
             </div>
-
-            <!-- Top menu -->
+            <!------ Top menu  ------>
                 <div class="menu">
                 <ul>
-                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="handcrafts.html">Handcrafts</a></li>
                 <li><a href="digital-art.html">Digital Art</a></li>
                 <li><a href="inking.html">Inking</a></li>
@@ -47,11 +46,11 @@
         </div>
         </header>
 
-        <div id="page-content-wrapper">
+        <section id="page-content-wrapper">
                 <!-- PAGE MAIN CONTENT -->
 
                 <!-- PAGE HEADER IMAGE -->
-                <img id="page-main-image" class="centered-image" src="images/header_image_900x530.png" alt="Header image" title="Header image" />
+                <img id="page-main-image" class="centered-image" src="images/header_image_900x530.png" atl="Header image" title="Header image" />
 
             <h1 id="page-content-title">The Diversity of Art</h1>
 
@@ -66,7 +65,7 @@
                 </main>
             </div>
             
-        </div>
+        </section>
 
         <footer>
             <!--    PAGE NAVIGATION
@@ -95,8 +94,9 @@
                     REPLACE WITH GITHUB LINKS -->
 
             <div id="site-info" class="row">
-                <p><a href="index.html">Home</a> | <a href="credits.html">Members</a> | <a href="https://github.com/StephenGrose/IT115-F203186-A4-Group5" target="_blank">Our GitHub Repo</a> | Valid HTML & CSS </p>
+                <p><a href="index.html">Home</a> | <a href="credits.html">Members</a> | <a href="https://github.com/StephenGrose/IT115-F203186-A4-Group5" target="_blank">Our GitHub Repo</a></p>
             </div>
+
         </footer>
 
     </body>
