--- a/credits.html
+++ b/credits.html
@@ -53,7 +53,7 @@
                 <main>
                     <!-- MAIN TEXT BODY -->
                     <p>
-                        <strong>Stephen Grose</strong> - Team lead | Project and repo management | Writing and research (Handcrafts/Fibercrafts)
+                        <strong><a href="https://www.linkedin.com/in/stephenwgrose/" target="_blank">Stephen Grose</a></strong> - Team lead | Project and repo management | Writing and research (Handcrafts/Fibercrafts)
                         <br>
                         <strong>Rory Hackney</strong> - Writing and research (Home Page, Digital Art, Inking)
                         <br>
