--- a/credits.html
+++ b/credits.html
@@ -55,13 +55,13 @@
                     <p>
                         <strong><a href="https://www.linkedin.com/in/stephenwgrose/" target="_blank">Stephen Grose</a></strong> - Team lead | Project and repo management | Writing and research (Handcrafts/Fibercrafts)
                         <br>
-                        <strong>Rory Hackney</strong> - Writing and research (Home Page, Digital Art, Inking)
+                        <strong><a href="http://www.rorystories.com" target="_blank">Rory Hackney</a></strong> - Writing and research (Home Page, Digital Art, Inking)
                         <br>
                         <strong>Malik Waller</strong> - Design and development
                         <br>
                         <strong>Jeremy Bittner</strong> - Writing and research (Glassblowing)
                         <br>
-                        <strong>Gift Homsaen</strong> - Writing and research (Cocoa Painting) | Layout design | Graphics | Co-development
+                        <strong><a href="https://thecraftminded.com/" target="_blank">Gift Homsaen</a></strong> - Writing and research (Cocoa Painting) | Layout design | Graphics | Co-development
                     </p>
                 </main>
             </div>
