--- a/credits.html
+++ b/credits.html
@@ -61,7 +61,7 @@
                         <br>
                         <strong>Jeremy Bittner</strong> - Writing and research (Glassblowing)
                         <br>
-                        <strong><a href="https://thecraftminded.com/" target="_blank">Gift Homsaen</a></strong> - Writing and research (Cocoa Painting) | Layout design | Graphics | Co-development
+                        <strong><a href="https://www.linkedin.com/in/gift-tanakan-homsaen-082210120/" target="_blank">Gift Homsaen</a></strong> - Writing and research (Cocoa Painting) | Layout design | Graphics | Co-development
                     </p>
                 </main>
             </div>
