--- a/credits.html
+++ b/credits.html
@@ -57,7 +57,7 @@
                         <br>
                         <strong><a href="http://www.rorystories.com" target="_blank">Rory Hackney</a></strong> - Writing and research (Home Page, Digital Art, Inking)
                         <br>
-                        <strong><a href="www.linkedin.com/in/malikwaller" target="_blank">Malik Waller</a></strong> - Design and development
+                        <strong><a href="https://www.linkedin.com/in/malikwaller" target="_blank">Malik Waller</a></strong> - Design and development
                         <br>
                         <strong>Jeremy Bittner</strong> - Writing and research (Glassblowing)
                         <br>
